--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.43.0",
     "react-redux": "^5.0.4",
     "react-router-native": "^4.1.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "native-base": "^2.1.2"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
